--- a/main.html
+++ b/main.html
@@ -6,8 +6,50 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="shorcut icon" href="slike/favicon.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+
+
+
 </head>
 <body>
+
+    <section class="main">
+        <header>
+            <div class="logo">
+                <span>Mega</span>Rent
+            </div>
+
+            <nav>
+                <ul>  <!--Navigacioni bar i logo u headeru-->
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Location</a></li>
+                    <li><a href="#">Catalog</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                </ul>
+            </nav>
+
+        </header>
+
+        <h1>Welcome to MegaRent</h1>
+        <h2>Your best online rent a car</h2>
+
+        <!--Section main end-->
+
+    </section>
+
+    <section class="catalog">
+
+    </section>
+
+    <section class="pricing">
+
+    </section>
+
+    <footer class="logo">
+
+    </footer>
     
 </body>
 </html>
