--- a/main.html
+++ b/main.html
@@ -41,6 +41,34 @@
 
     <section class="catalog">
 
+
+        <h3>Select from our catalog</h3>
+        <div class="column">
+            <img src="slike/car_civil.png" alt="Civil Vehicles">
+            <p>Civil Vehicles</p>
+            <a href="#">View Offers</a>
+
+        </div>
+        <div class="column">
+            <img src="slike/car_sport.png" alt="Sport Vehicles">
+            <p>Sport Vehicles</p>
+            <a href="#">View Offers</a>
+
+        </div>
+        <div class="column">
+            <img src="slike/car_suv.png" alt="Suv Vehicles">
+            <p>Suv Vehicles</p>
+            <a href="#">View Offers</a>
+
+        </div>
+        <div class="column">
+            <img src="slike/car_van.png" alt="Van Vehicles">
+            <p>Van Vehicles</p>
+            <a href="#">View Offers</a>
+        </div>
+
+        <!--Vehicles section end-->
+
     </section>
 
     <section class="pricing">
