table section done

--- a/main.html
+++ b/main.html
@@ -73,7 +73,24 @@
 
     <section class="pricing">
 
+
+        <h3>Pricing</h3>
+
+        <table>
+            <thead>
+                <tr><th>Car Type</th><th>Day</th><th>Week</th><th>Month</th></tr>
+            </thead>
+            <tr><td>Civil</td><td>20$</td><td>100$</td><td>200$</td></tr>
+            <tr><td>Transport</td><td>30$</td><td>150$</td><td>500$</td></tr>
+            <tr><td>Sport</td><td>40$</td><td>300$</td><td>900$</td></tr>
+            <tr><td>Suv</td><td>60$</td><td>350$</td><td>1000$</td></tr>
+
+        </table>
+
+
     </section>
+
+    <!--Pricing section done-->
 
     <footer class="logo">
 
