--- a/main.html
+++ b/main.html
@@ -94,7 +94,31 @@
 
     <footer class="logo">
 
+        <div class="logo">
+            <Span>Mega</Span>Rent
+        </div>
+        <address>
+            <p>
+                North Road
+            </p>
+            <p>
+                South London
+            </p>
+            <p>
+                Novi Sad
+            </p>
+        </address>
+
+        <div class="map">
+
+            <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d5618.785800108297!2d19.83966460140789!3d45.239847174763426!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2srs!4v1538913298618"
+                width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+        </div>
+
     </footer>
+
+    <!--footer done with map and address-->
     
 </body>
 </html>
